@@ -3,6 +3,8 @@
 	* themes/StyleTab/theme.jl: moved previous-workspace-button and
 	next-workspace-button out of StyleTab into frames.jl
 
+	* lisp/sawfish/wm/frames.jl: changed defaults for button-cursor-shapes
+
 2011-07-09  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/frames.jl: added an option to control the
 	cursor-shape of all built-in titlebar buttons. A set of reasonable
